syntax = "proto3";

package fuel_data_types.block;

// Shared types
message Bytes32Proto {
  bytes value = 1;
}

message BlockIdProto {
  bytes value = 1;
}

message SignatureProto {
  bytes value = 1;
}

message Tai64TimestampProto {
  uint64 value = 1;  // Represents a timestamp
}

// BlockHeader
message BlockHeaderProto {
  Bytes32Proto application_hash = 1;
  uint32 consensus_parameters_version = 2;
  uint64 da_height = 3;
  Bytes32Proto event_inbox_root = 4;
  BlockIdProto id = 5;
  uint32 height = 6;
  Bytes32Proto message_outbox_root = 7;
  uint32 message_receipt_count = 8;
  Bytes32Proto prev_root = 9;
  uint32 state_transition_bytecode_version = 10;
  Tai64TimestampProto time = 11;
  uint32 transactions_count = 12;
  Bytes32Proto transactions_root = 13;
  BlockHeaderVersionProto version = 14;
}

enum BlockHeaderVersionProto {
  BLOCK_HEADER_VERSION_V1 = 0;
}

// Consensus Types
message ConsensusProto {
  oneof consensus_type {
    GenesisProto genesis = 1;
    PoAConsensusProto poa_consensus = 2;
  }
}

message GenesisProto {
  Bytes32Proto chain_config_hash = 1;
  Bytes32Proto coins_root = 2;
  Bytes32Proto contracts_root = 3;
  Bytes32Proto messages_root = 4;
  Bytes32Proto transactions_root = 5;
}

message PoAConsensusProto {
  SignatureProto signature = 1;
}

// Block
message BlockProto {
  ConsensusProto consensus = 1;
  BlockHeaderProto header = 2;
  uint32 height = 3;
  BlockIdProto id = 4;
  repeated Bytes32Proto transaction_ids = 5;
  BlockVersionProto version = 6;
}

enum BlockVersionProto {
  BLOCK_VERSION_V1 = 0;
}
